--- a/package.json
+++ b/package.json
@@ -18,12 +18,21 @@
         "@vue/compiler-sfc": "^3.0.5",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "case-sensitive-paths-webpack-plugin": "^2.4.0",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "portal-vue": "^2.1.7",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
+        "postcss-nesting": "^7.0.1",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "metro4": "^4.4.3"
     }
 }
