--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "laravel-echo-ratchet": "^1.4.3",
         "metro4": "^4.4.3"
     }
 }
